@@ -322,24 +322,68 @@ CFArrayGetValues (CFArrayRef array, CFRange range, const void **values)
 //
 // CFMutableArray
 //
+
+#define DEFAULT_ARRAY_CAPACITY 16
+
 CFMutableArrayRef
 CFArrayCreateMutable (CFAllocatorRef allocator, CFIndex capacity,
                       const CFArrayCallBacks *callBacks)
 {
-  return NULL;
+  struct __CFMutableArray *new;
+  
+  new = (struct __CFMutableArray*) _CFRuntimeCreateInstance (allocator,
+    _kCFArrayTypeID, sizeof(struct __CFArray) - sizeof(CFRuntimeBase), 0);
+  
+  if (new)
+    {
+      if (callBacks == NULL)
+        callBacks = &_kCFNullArrayCallBacks;
+      
+      new->_callbacks = callBacks;
+      
+      if (capacity < DEFAULT_ARRAY_CAPACITY)
+        capacity = DEFAULT_ARRAY_CAPACITY;
+      
+      new->_contents =
+        CFAllocatorAllocate (allocator, capacity * sizeof(void*), 0);
+      new->_count = 0;
+      new->_capacity = capacity;
+    }
+  
+  return (CFMutableArrayRef)new;
 }
 
 CFMutableArrayRef
 CFArrayCreateMutableCopy (CFAllocatorRef allocator, CFIndex capacity,
                           CFArrayRef array)
 {
-  return NULL;
+  CFMutableArrayRef new;
+  const CFArrayCallBacks *callbacks;
+  
+  if (CF_IS_OBJC(_kCFArrayTypeID, array))
+	  callbacks = &kCFTypeArrayCallBacks;
+	else
+	  callbacks = array->_callbacks;
+  
+  new = CFArrayCreateMutable (allocator, capacity, callbacks);
+  if (new)
+    {
+      CFIndex idx;
+      CFIndex count;
+      
+      for (idx = 0, count = CFArrayGetCount(array) ; idx < count ; ++idx)
+        array->_contents[idx] =
+          callbacks->retain(CFArrayGetValueAtIndex(array, idx), 0);
+    }
+  
+  return new;
 }
 
 void
 CFArrayAppendArray (CFMutableArrayRef array, CFArrayRef otherArray,
                     CFRange otherRange)
 {
+  
 }
 
 void
@@ -353,8 +397,14 @@ void
 CFArrayExchangeValuesAtIndices (CFMutableArrayRef array, CFIndex idx1,
                                 CFIndex idx2)
 {
+  const void *tmp;
+  
   CF_OBJC_FUNCDISPATCH2(_kCFArrayTypeID, void, array,
     "exchangeObjectAtIndex:withObjectAtIndex:", idx1, idx2);
+  
+  tmp = array->_contents[idx1];
+  array->_contents[idx1] = array->_contents[idx2];
+  array->_contents[idx2] = tmp;
 }
 
 void
@@ -368,15 +418,35 @@ CFArrayInsertValueAtIndex (CFMutableArrayRef array, CFIndex idx,
 void
 CFArrayRemoveAllValues (CFMutableArrayRef array)
 {
+  CFArrayReleaseCallBack release;
+  CFIndex idx;
+  CFIndex count;
+  
   CF_OBJC_FUNCDISPATCH0(_kCFArrayTypeID, void, array,
     "removeAllObjects");
+  
+  release = array->_callbacks->release;
+  for (idx = 0, count = array->_count ; idx < count ; ++idx)
+    release (NULL, array->_contents[idx]);
+  
+  array->_count = 0;
 }
 
 void
 CFArrayRemoveValueAtIndex (CFMutableArrayRef array, CFIndex idx)
 {
+  CFArrayReleaseCallBack release;
+  CFIndex count;
+  
   CF_OBJC_FUNCDISPATCH1(_kCFArrayTypeID, void, array,
     "removeObjectAtIndex:", idx);
+  
+  release = array->_callbacks->release;
+  release (NULL, array->_contents[idx]);
+  
+  --(array->_count);
+  for (count = array->_count ; idx < count ; ++idx)
+    array->_contents[idx] = array->_contents[idx+1];
 }
 
 void
@@ -396,15 +466,69 @@ void
 CFArraySetValueAtIndex (CFMutableArrayRef array, CFIndex idx,
                         const void *value)
 {
+  CFArrayReleaseCallBack release;
+  CFArrayRetainCallBack retain;
+  
   CF_OBJC_FUNCDISPATCH2(_kCFArrayTypeID, void, array,
     "replaceObjectAtIndex:withObject:", idx, value);
   
+  release = array->_callbacks->release;
+  retain = array->_callbacks->retain;
   
+  release (NULL, array->_contents[idx]);
+  array->_contents[idx] = retain (NULL, value);
+}
+
+/* Using the quick-sort algorithm to sort CFArrays. */
+CFIndex
+CFArraySortValuesPartition (CFMutableArrayRef array, CFIndex left,
+  CFIndex right, CFIndex pivot, CFComparatorFunction comp, void *ctxt)
+{
+  CFIndex idx;
+  CFIndex storeIdx;
+  CFComparisonResult result;
+  const void *pivotValue;
+  
+  pivotValue = array->_contents[pivot];
+  CFArrayExchangeValuesAtIndices (array, pivot, right);
+  storeIdx = left;
+  for (idx = left ; left < right ; ++idx)
+    {
+      result = (*comp)(array->_contents[idx], pivotValue, ctxt);
+      if (result == kCFCompareLessThan)
+        {
+          CFArrayExchangeValuesAtIndices (array, idx, storeIdx);
+          storeIdx += 1;
+        }
+    }
+  CFArrayExchangeValuesAtIndices (array, storeIdx, right);
+  
+  return storeIdx;
+}
+
+void
+CFArraySortValuesQuickSort (CFMutableArrayRef array, CFIndex left,
+  CFIndex right, CFComparatorFunction comp, void *ctxt)
+{
+  if (left < right)
+    {
+      CFIndex pivotIdx;
+      CFIndex pivotNewIdx;
+      
+      pivotIdx = (right - left) / 2;
+      pivotNewIdx = CFArraySortValuesPartition (array, left, right, pivotIdx,
+        comp, ctxt);
+      
+      CFArraySortValuesQuickSort (array, left, pivotNewIdx - 1, comp, ctxt);
+      CFArraySortValuesQuickSort (array, pivotNewIdx + 1, right, comp, ctxt);
+    }
 }
 
 void
 CFArraySortValues (CFMutableArrayRef array, CFRange range,
                    CFComparatorFunction comparator, void *context)
 {
-  
+  CFArraySortValuesQuickSort (array, range.location,
+    range.location + range.length, comparator, context);
 }
+
